# onyx

./: .gitignore  Data Engineer Challenge_input.csv  README.md  pyproject.toml
dbt_project/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  pipeline.py  profiles.yml
dbt_project/docs/: overview.md
dbt_project/ingest/: csv_to_postgres.py
dbt_project/models/gold/: _gold_schema.yml  agg_daily_turnover_revenue.sql  agg_revenue_by_egm_by_venue.sql  agg_turnover_by_venue.sql
dbt_project/models/silver/: _silver_schema.yml  silver_egm_data.sql
dbt_project/models/sources/bronze/: raw_egm_data.yml
dbt_project/snapshots/egm_data/: silver_egm_data_snap.sql
dbt_project/tests/generic/: test_is_date_format.sql
